--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,16 +1,23 @@
-html {font-size: 16px}
+html {
+    font-size: 16px
+}
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: 'Open Sans', sans-serif;
     color: $black;
     letter-spacing: 0;
     font-weight: 600;
-    font-style: normal;   
+    font-style: normal;
     word-break: break-word;
-    word-wrap: break-word; 
-    text-rendering:  optimizeLegibility;
+    word-wrap: break-word;
+    text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing:  grayscale;
+    -moz-osx-font-smoothing: grayscale;
     text-transform: uppercase;
 }
 
@@ -38,29 +45,30 @@ h3 {
     line-height: 1.3em;
 }
 
-.section-title, .text-center {
+.section-title,
+.text-center {
     text-align: center;
 }
 
 .section-title:after {
     content: "";
     width: 40px;
-    top:  46px;
-    left:   50%;
+    top: 46px;
+    left: 50%;
     margin-left: -20px;
     position: absolute;
     border-bottom: 6px solid $btn;
-  }
+}
 
-  .section-title-h1:after {
+.section-title-h1:after {
     content: "";
     width: 40px;
-    top:  82px;
-    left:   50%;
+    top: 82px;
+    left: 50%;
     margin-left: -20px;
     position: absolute;
     border-bottom: 6px solid $btn;
-  }
+}
 
 h4 {
     font-size: 1.4em;
@@ -126,10 +134,11 @@ p {
 .stats-flex .fa-lg {
     font-size: 1.5em;
     padding-top: 4px;
-    text-rendering:  optimizeLegibility;
+    text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing:  grayscale;
+    -moz-osx-font-smoothing: grayscale;
 }
+
 .fa-users {
     color: $btn
 }
@@ -150,20 +159,25 @@ p {
     color: $muted;
 }
 
-.fa-stack .fa {color: $grad2}
-.fa-stack .fa.fa-circle {opacity: .1}
-.fa-stack:hover .fa.fa-circle {opacity: .3}
+.fa-stack .fa {
+    color: $grad2
+}
 
+.fa-stack .fa.fa-circle {
+    opacity: .1
+}
+
+.fa-stack:hover .fa.fa-circle {
+    opacity: .3
+}
 
 // Facebook group button //
 
-
-
 /* Shared */
+
 .loginBtn {
     box-sizing: border-box;
     position: relative;
-    /* width: 13em;  - apply for fixed size */
     padding: 8px 15px 8px 46px;
     border: none;
     text-align: left;
@@ -173,8 +187,9 @@ p {
     font-size: 16px;
     color: #FFF;
     margin-top: 40px;
-  }
-  .loginBtn:before {
+}
+
+.loginBtn:before {
     content: "";
     box-sizing: border-box;
     position: absolute;
@@ -182,35 +197,31 @@ p {
     left: 0;
     width: 34px;
     height: 100%;
-  }
-  .loginBtn:focus {
-    outline: none;
-  }
-  .loginBtn:active {
-    box-shadow: inset 0 0 0 32px rgba(0,0,0,0.1);
-  }
-  
-  
-  /* Facebook */
+}
 
-  .fb-btn {
-      margin: 50px 0;
-  }
-  .loginBtn--facebook {
+.loginBtn:focus {outline: none}
+
+.loginBtn:active {box-shadow: inset 0 0 0 32px rgba(0, 0, 0, 0.1)}
+
+
+/* Facebook */
+
+.fb-btn {margin: 50px 0}
+
+.loginBtn--facebook {
     background-color: #4C69BA;
     background-image: linear-gradient(#4C69BA, #3B55A0);
-    /*font-family: "Helvetica neue", Helvetica Neue, Helvetica, Arial, sans-serif;*/
     text-shadow: 0 -1px 0 #354C8C;
     cursor: pointer;
-  }
-  .loginBtn--facebook:before {
+}
+
+.loginBtn--facebook:before {
     border-right: #364e92 1px solid;
     background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_facebook.png') 6px 6px no-repeat;
-  }
-  .loginBtn--facebook:hover,
-  .loginBtn--facebook:focus {
+}
+
+.loginBtn--facebook:hover,
+.loginBtn--facebook:focus {
     background-color: #5B7BD5;
     background-image: linear-gradient(#5B7BD5, #4864B1);
-  }
-  
-  
+}
